--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="project.html">Projects</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="Contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
   </header>
